--- a/css/qgis2web.css
+++ b/css/qgis2web.css
@@ -13,7 +13,7 @@
 
         #map-title {
             position: absolute;
-            top: 20px;
+            top: 10px;
             left: 20px;
             z-index: 1000;
             font-family: Arial, sans-serif;
@@ -33,6 +33,7 @@
             font-size: 16px;
             font-family: "Calibri", sans-serif;
             font-weight: normal;
+            margin-bottom: 20px;
             margin: 0;
         }
         th {
