--- a/css/qgis2web.css
+++ b/css/qgis2web.css
@@ -49,9 +49,10 @@
             margin: 10px;
         }
         .legend h3 {
-                margin-top: -30px;
+                margin-top: -25px;
                 font-size: 14px;
-                font-family: "Calibri", sans-serif;
+                font-family: "Calibri light", sans-serif;
+                font-style: italic;
                 text-align: center;
         }
         .legend-content {
